# ati-netft-cpp

./: CMakeLists.txt  Dockerfile  README.md  build-and-run.sh  clbin_src.sh  compose.yml
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  netft_sensor.cpp
src/include/: netft_sensor.hpp
src/tests/: CMakeLists.txt  sensor_test.cpp
